[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/image/ui/game_over/button_normal.png" type="Texture" id=1]
[ext_resource path="res://assets/font/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/image/ui/game_over/button_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/image/ui/game_over/button_hover.png" type="Texture" id=4]
[ext_resource path="res://scripts/game_over/game_over.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 213, 50 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 213, 50 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 213, 50 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 213, 50 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 213, 50 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 213, 50 )

[node name="GameOver" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0 )

[node name="GameOverLabel" type="Label" parent="."]
margin_left = 112.0
margin_top = 167.0
margin_right = 937.0
margin_bottom = 299.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1

[node name="Label" type="Label" parent="."]
margin_left = 177.0
margin_top = 305.0
margin_right = 842.0
margin_bottom = 409.0
custom_fonts/font = SubResource( 2 )
align = 1
percent_visible = 0.0

[node name="TryAgain" type="Button" parent="."]
margin_left = 404.0
margin_top = 402.0
margin_right = 617.0
margin_bottom = 454.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Try Again"

[node name="MainMenu" type="Button" parent="."]
margin_left = 404.0
margin_top = 478.0
margin_right = 617.0
margin_bottom = 530.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Main Menu"

[node name="Audio" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="TryAgain" to="." method="_on_TryAgain_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
